# mandala

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
ansible/collections/ansible_collections/mandala/fleet/: README.md  galaxy.yml
ansible/collections/ansible_collections/mandala/fleet/playbooks/: deploy.yml  state.yml
ansible/collections/ansible_collections/mandala/fleet/plugins/action/: build.py  deploy.py
ansible/collections/ansible_collections/mandala/fleet/plugins/module_utils/: events.py  streamer.py
ansible/collections/ansible_collections/mandala/fleet/plugins/modules/: build.py  deploy.py
ansible/collections/tests/: test_events.py
cli/: README.md  pyproject.toml
cli/src/mandala_fleet/: __init__.py  cli.py  drift.py  inventory.py  registry.py  runner.py
cli/src/mandala_fleet/engines/: __init__.py  ansible.py  deploy.py
cli/src/mandala_fleet/mcp/: __init__.py  activity.py  errors.py  host.py  server.py  session.py
cli/src/mandala_fleet/tui/: __init__.py  deploy.py  explorer.py  nom.py  render.py  select_table.py  tasks.py
cli/tests/: test_drift.py  test_interop_fixtures.py  test_interop_rs.py  test_inventory.py  test_mcp.py  test_registry.py  test_render.py  test_runner.py  test_tui_imports.py  test_tui_mcp.py
cli/tests/fixtures/interop/: README.md  generate.py
cli/tests/fixtures/interop/state/: .expected.json  alpha.json  beta.json  delta.json  epsilon.json  gamma.json  theta.json  zeta.json
cli/tests/fixtures/interop/state/runs/20260101T000000_000000-1001/: alpha.jsonl  beta.jsonl  beta.jsonl.tail  controller.jsonl  meta.json
cli/tests/fixtures/interop/state/runs/20260101T000100_000000-1002/: delta.jsonl  gamma.jsonl  meta.json
cli/tests/fixtures/interop/state/runs/20260101T000200_000000-1003/: controller.jsonl  meta.json
cli/tests/fixtures/interop/state/runs/20260101T000300_000000-1004/: meta.json
cli/tests/fixtures/interop/state/runs/20260101T000400_000000-1005/: meta.json
cli/tests/fixtures/mcp/: README.md  build.ok.json  capture_fixtures.py  deploy.dry_ok.json  deploy.refused.json  deploy_status.command.json  deploy_status.deploy.json  deploy_status.list.json  drift.eval_error.json  drift.filtered.json  drift.ok.json  groups.ok.json  host_eval.eval_error.json  host_eval.ok.json  members.compact.json  members.full.json  ping.mixed.json  reboot.ok.json  reboot.refused.json  reload.ok.json  reload.unavailable_error.json  resolve.ok.json  restart_service.partial.json  restart_service.refused.json
crates/mandala/: Cargo.toml
crates/mandala-context/: Cargo.toml
crates/mandala-context/src/: client.rs  discovery.rs  fleet.rs  host.rs  identity.rs  lib.rs  protocol.rs
crates/mandala-context/tests/: context.rs  failover.rs  lifecycle.rs
crates/mandala-core/: Cargo.toml
crates/mandala-core/src/: cli.rs  drift.rs  eval.rs  interop_tests.rs  inventory.rs  lib.rs  registry.rs  runner.rs
crates/mandala-core/src/engines/: ansible.rs  deploy.rs  mod.rs
crates/mandala-core/tests/fixtures/deploy-runs/ansible/: alpha.jsonl  beta.jsonl  meta.json
crates/mandala-core/tests/fixtures/deploy-runs/engine/: alpha.jsonl  beta.jsonl  build.jsonl  meta.json
crates/mandala-deploy/: Cargo.toml
crates/mandala-deploy/src/: data.rs  deploy.rs  event.rs  lib.rs  push.rs
crates/mandala-eval-worker/: Cargo.toml
crates/mandala-eval-worker/src/: main.rs  nix.rs
crates/mandala-eval-worker/tests/: spawn.rs
crates/mandala-mcp/: Cargo.toml
crates/mandala-mcp/src/: activity.rs  context.rs  effects.rs  lib.rs  server.rs  tools.rs
crates/mandala-mcp/tests/: context_proxy.rs  mcp_failover.rs  parity.rs  parity_proxy.rs
crates/mandala-mcp/tests/common/: mod.rs
crates/mandala-mcp/tests/fixtures/: stdio_handshake.jsonl
crates/mandala-tui/: Cargo.toml
crates/mandala-tui/examples/: demo.rs  deploy.rs  explorer.rs
crates/mandala-tui/src/: ansi.rs  app.rs  context.rs  deploy.rs  event.rs  explorer.rs  lib.rs  nom_pane.rs  render.rs  screen.rs  scroll.rs  select.rs  state.rs  term.rs  theme.rs
crates/mandala-tui/tests/: action_loop.rs  context_flow.rs  deploy_flow.rs  explorer.rs  harness.rs  nom_pane.rs  screens.rs
crates/mandala-tui/tests/fixtures/: nix-internal-json.txt
crates/mandala-tui/tests/snapshots/: harness__snapshot_concurrent_jobs_spinner_line.snap  harness__snapshot_demo_idle.snap  harness__snapshot_drift_view_with_expected_caption.snap  harness__snapshot_groups_view.snap  harness__snapshot_members_view.snap  harness__snapshot_working_status_with_cursor_moved.snap  screens__deploy_screen_running.snap  screens__deploy_screen_summary.snap  screens__snapshot_confirm_modal.snap  screens__snapshot_reboot_modal.snap  screens__snapshot_task_screen_stream.snap
crates/mandala/src/: main.rs  supervisor.rs
crates/mandala/tests/: cli.rs  mcp_stdio.rs
crates/nix-build-forest/: Cargo.toml
crates/nix-build-forest/examples/: probe.rs
crates/nix-build-forest/src/: drv.rs  duration.rs  forest.rs  lib.rs  msg.rs  plain.rs  sort.rs  widget.rs
crates/nix-build-forest/tests/: corpus.rs
crates/nix-build-forest/tests/fixtures/: README.md  failure.nix-log.zst  medium.nix-log.zst  nom-parity.json  small.nix-log.zst
docs/: convention.md
docs/patterns/: ansible-imperative.md  terranix.md
examples/fake-fleet/: member.nix  mesh.nix  operator.nix  pki.nix  topology.nix
examples/showcase/: README.md  flake.nix  mesh.nix  operator.nix  secrets.nix  topology.nix
examples/showcase/hosts/: cache.nix  web.nix
examples/showcase/members/: router.nix
examples/showcase/terranix/: dns.nix
flake-modules/: ansible.nix  deploy.nix  fleet.nix  sops.nix
lib/: default.nix  deploy-settings.nix  net.nix
lib/projections/: ansible-inventory.nix  deploy-batch.nix  deploy-nodes.nix  sops-config.nix
schema/: member.nix  mesh.nix  operator.nix  pki.nix  secrets.nix  topology.nix
templates/fleet/: flake.nix  operator.nix
templates/fleet/hosts/: example-host.nix
