# mandala Rust workspace — OpenSpec changes `mandala-rust-rewrite` (phase 1)
# and `mandala-native-tui` (phase 2, which retired the Python porcelain
# entirely): the `mandala-core` library, the fleet-context layer, the
# `mandala-mcp` stdio server, the ratatui TUI, and the single `mandala`
# binary that is now the whole porcelain surface.
[workspace]
resolver = "3"
members = [
  "crates/mandala-core",
  "crates/mandala-context",
  "crates/mandala-mcp",
  "crates/mandala",
  "crates/mandala-eval-worker",
  "crates/mandala-tui",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
rust-version = "1.90"
repository = "https://github.com/bryanhuff/mandala"

[workspace.dependencies]
mandala-core = { path = "crates/mandala-core" }
mandala-context = { path = "crates/mandala-context" }
mandala-mcp = { path = "crates/mandala-mcp" }
mandala-tui = { path = "crates/mandala-tui" }

# A single shared profile knob: the release binary is what ships, so keep it
# lean. Dev builds stay fast (default opt-level 0).
[profile.release]
lto = "thin"
strip = true
