[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mandala-fleet"
version = "0.1.0"
description = "mandala fleet porcelain (Python): the Textual TUI tiers over the flake.mandala aggregate — the headless CLI/MCP surfaces live in the Rust binary"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bryan Prather-Huff", email = "bryan@pratherhuff.com" }]
requires-python = ">=3.11"
dependencies = ["typer", "textual", "pyte", "fastmcp"]

[project.scripts]
mandala = "mandala_fleet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
