[package]
name = "mandala-context"
description = "Shared fleet execution context: bind-as-lock leadership, discovery, and the line-JSON coordination protocol"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# `drift::state_dir` resolution lives with the callers; here we take the
# byte-format writer (`to_pretty_1space`) so the discovery file shares the
# `json.dumps(indent=1, sort_keys=True)` discipline of `meta.json` and
# `.expected.json` (fleet-state-formats).
mandala-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The coordination endpoint: loopback TcpListener/TcpStream (`net`), line
# framing (`io-util`), per-connection tasks + channels (`rt`/`sync`), and the
# heartbeat/probe timers (`time`). `macros` is for the tests' `#[tokio::test]`.
tokio = { version = "1", features = [
  "net",
  "io-util",
  "rt",
  "sync",
  "time",
  "macros",
] }
# Bearer-token mint: OS randomness directly — already in the lock as a
# transitive dep, no `rand` stack needed for 32 bytes per context.
getrandom = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
