[package]
name = "mandala-core"
description = "Fleet inventory, selector algebra, drift, and run registry for the mandala porcelain"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Timestamp math for drift staleness (`_too_old`). Minimal features: `now`
# gives `Utc::now()` without pulling `iana-time-zone` (no local-tz needed).
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
# Safe `kill(pid, 0)` liveness probe for the run registry (no raw unsafe):
# `nix::sys::signal::kill(pid, None)` sends signal 0, mapping ESRCH→gone,
# EPERM→exists. `SIGTERM` (for `DeployRun::terminate`) rides the same feature.
nix = { version = "0.30", default-features = false, features = ["signal"] }
# The write-side runner (`DeployRun`/`CommandRun`) spawns and supervises
# subprocesses on tokio: `process` = `tokio::process::Command` + async child
# wait/try_wait; `io-util` = `AsyncBufReadExt::lines` for the stdout reader
# task; `rt`+`macros` = the runtime + `#[tokio::test]`; `time` = the tests'
# meta-poll sleeps. The design mandates one async runtime across the cores
# (the MCP server + phase-2 TUI drive these under tokio).
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "time"] }
