[package]
name = "mandala-deploy"
description = "Sink-attributed deploy-rs push and activation controller for Mandala"
edition.workspace = true
version.workspace = true
license = "MIT OR MPL-2.0"
rust-version.workspace = true
repository.workspace = true

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync"] }

[[bin]]
name = "mandala-deploy-spike"
path = "src/bin/spike.rs"
