[package]
name = "mandala-eval-worker"
description = "Persistent libnixexpr-c eval worker: warm EvalState + line-JSON stdio protocol for aggregate / expected-toplevels / host_eval"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "mandala-eval-worker"
path = "src/main.rs"

[dependencies]
# Raw, unsafe FFI to the Nix C API (libnixexpr-c / libnixflake-c). MIT, and its
# version tracks the Nix release (0.2347.x == Nix 2.34.7 — the pin). We opt into
# only the stable `-c` libraries we link (no `shim`/`main`: no C++23 wrapper
# compile, no manual libnixexpr dylib linking — the plain C API covers warm
# EvalState, flake locking, deep value forcing, and value→JSON walking).
nix-bindings-sys = { version = "0.2347.8", default-features = false, features = [
  "store",
  "expr",
  "util",
  "flake",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
