[package]
name = "mandala-eval-worker"
description = "Persistent libnixexpr-c eval worker: warm EvalState + line-JSON stdio protocol for aggregate / expected-toplevels / host_eval"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "mandala-eval-worker"
path = "src/main.rs"

[dependencies]
# Safe, high-level bindings to the Nix C API (libnixexpr-c / libnixflake-c),
# the companion crate to `nix-bindings-sys` (same repo, same version, MIT). Its
# version tracks the Nix release (0.2347.x == Nix 2.34.7 — the pin). It pulls
# `-sys` transitively; we opt into only the stable `-c` libraries we link (no
# `shim`/`main`: no C++23 wrapper compile, no manual libnixexpr dylib linking —
# the plain C API covers warm EvalState, flake locking, deep value forcing, and
# value→JSON walking). The `expr` feature already implies `store`, and `flake`
# implies `expr`, but they are listed for intent.
nix-bindings = { version = "0.2347.8", default-features = false, features = [
  "store",
  "expr",
  "util",
  "flake",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
