[package]
name = "mandala-mcp"
description = "stdio MCP server over the mandala fleet cores"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
mandala-core.workspace = true
# rust-mcp-sdk: server-only, stdio transport, tool macros (phase-1 spike,
# section 1.2). HTTP/SSE transports (hyper-server) come in phase 2.
rust-mcp-sdk = { version = "0.10", default-features = false, features = [
  "server",
  "macros",
  "stdio",
] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util", "sync", "time"] }
