[package]
name = "mandala-mcp"
description = "stdio MCP server over the mandala fleet cores"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
mandala-core.workspace = true
# The fleet execution context (mandala-native-tui section 3): `mandala mcp`
# joins (or claims) the per-checkout context at start — leader hosts the
# endpoint, followers forward tool execution through `ContextSession`.
mandala-context.workspace = true
# rust-mcp-sdk: server-only, stdio transport, tool macros (phase-1 spike,
# section 1.2). HTTP/SSE transports (hyper-server) come in phase 2.
rust-mcp-sdk = { version = "0.10", default-features = false, features = [
  "server",
  "macros",
  "stdio",
] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `process` powers the ad-hoc ansible runs (ping / restart_service); the rest
# is the stdio server runtime + the blocking-eval `spawn_blocking` seam.
tokio = { version = "1", features = [
  "rt",
  "macros",
  "io-std",
  "io-util",
  "sync",
  "time",
  "process",
] }
# Same minimal chrono as mandala-core: the `drift` tool passes `Utc::now()` +
# `default_max_age()` into `drift::compare`.
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }

[dev-dependencies]
# The context/failover integration tests drive real TCP endpoints and
# concurrent sessions (multi-thread runtimes).
tokio = { version = "1", features = ["rt-multi-thread"] }
