[package]
name = "mandala-tui"
description = "Native fleet TUI substrate: hand-rolled ratatui event loop (LoopEvent / AppState split / dirty-flag render) and the PTY-hosted nom build pane"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# The TUI is herdr-style hand-rolled (design decision, settled 2026-07-16):
# stock ratatui + cherry-picked widget crates only, no framework. The
# `crossterm` feature selects the crossterm backend (`CrosstermBackend`).
ratatui = { version = "0.30", features = ["crossterm"] }
# Terminal events + raw-mode/alternate-screen control. `event-stream` gives
# the async `EventStream` the single `tokio::select!` loop polls; the version
# must stay in lockstep with what ratatui's `crossterm` feature resolves
# (ratatui-crossterm ^0.29) or the Event types bifurcate.
crossterm = { version = "0.29", features = ["event-stream"] }
# The nom pane's terminal emulator (the pyte analog) + the widget that blits
# a `vt100::Screen` into a ratatui `Buffer` with colors/attrs intact.
# tui-term 0.3.x tracks ratatui 0.30 (ratatui-core 0.1 / ratatui-widgets
# 0.3) and its default feature set is exactly the vt100 backend — chosen
# over hand-rolling the cell translation (spike 1.3 rationale in the
# OpenSpec design); we own the Parser, so swapping in a hand-rolled
# translation later is a local change.
vt100 = "0.16"
tui-term = "0.3"
# Raw openpty + TIOCSWINSZ/TIOCGWINSZ ioctls + SIGWINCH/SIGTSTP. NOT
# portable-pty: its `SlavePty::spawn_command` hard-wires stdin to the pty,
# and the nom pane's load-bearing shape (from nom.py) is stdin=pipe (we
# feed `@nix` lines) with only stdout/stderr on the pty — a pty stdin
# would echo the fed json straight into the emulated screen. Same crate
# and major as mandala-core's registry probe.
nix = { version = "0.30", default-features = false, features = [
  "term",
  "ioctl",
  "signal",
] }
# One async runtime across the workspace (design mandate): the loop is a
# single `tokio::select!` over the event stream, the internal channel, and
# the deadline-min timer set.
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
# `StreamExt::next` for the EventStream + `FutureExt::now_or_never` for the
# bounded post-wake drain. No default features: no executor, no macros.
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
# Snapshot tests over TestBackend's Display impl — the AppState→render seam
# is the testable surface (spike 1.4).
insta = "1"
