[package]
name = "mandala-tui"
description = "Native fleet TUI substrate: hand-rolled ratatui event loop and native Nix build forest"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# The explorer tier reads the fleet through the SAME cores as the CLI/MCP:
# Inventory + selector algebra, drift compare + the one STATUS styling
# vocabulary, `runner::ansible_dir`, and the `cli::load_inventory` seam
# (`MANDALA_AGGREGATE_FILE`) so tests inject fixtures exactly like the CLI's.
mandala-core.workspace = true
nix-build-forest = { workspace = true, features = ["ratatui"] }
# Section 6: the TUI participates in the per-checkout fleet execution
# context — leader (hosting the endpoint) or observer (activity
# subscription), the same `ContextSession` state machine `mandala mcp`
# rides. Dependency direction of record: mandala-tui sits ABOVE mandala-mcp
# (it consumes `host_config_factory`/`tool_is_idempotent`); nothing below
# depends on mandala-tui, so there is no cycle and no shared-factory crate
# is needed.
mandala-context.workspace = true
mandala-mcp.workspace = true
# Same minimal chrono as mandala-core/mandala-mcp: the drift view passes
# `Utc::now()` + `default_max_age()` into `drift::compare`.
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "now",
] }
# Member records are raw JSON objects (mandala-core's serde-fidelity rule);
# the member/role/tags columns read them as `serde_json::Value`.
serde_json = "1"
# The TUI is herdr-style hand-rolled (design decision, settled 2026-07-16):
# stock ratatui + cherry-picked widget crates only, no framework. The
# `crossterm` feature selects the crossterm backend (`CrosstermBackend`).
ratatui = { version = "0.30", features = ["crossterm"] }
# Terminal events + raw-mode/alternate-screen control. `event-stream` gives
# the async `EventStream` the single `tokio::select!` loop polls; the version
# must stay in lockstep with what ratatui's `crossterm` feature resolves
# (ratatui-crossterm ^0.29) or the Event types bifurcate.
crossterm = { version = "0.29", features = ["event-stream"] }
# Process termination and suspend-to-shell signals. The former PTY-specific
# term/ioctl features are intentionally absent.
nix = { version = "0.30", default-features = false, features = ["signal"] }
# One async runtime across the workspace (design mandate): the loop is a
# single `tokio::select!` over the event stream, the internal channel, and
# the deadline-min timer set. `process` + `io-util` power the background
# survey (`ansible-playbook mandala.fleet.state` output-captured off the UI
# — writing through would shred the alternate screen, the Python lesson).
tokio = { version = "1", features = [
  "rt",
  "sync",
  "time",
  "macros",
  "process",
  "io-util",
] }
# `StreamExt::next` for the EventStream + `FutureExt::now_or_never` for the
# bounded post-wake drain. No default features: no executor, no macros.
futures-util = { version = "0.3", default-features = false }
# SGR → ratatui spans for the task/deploy log panes (section 5.3). In the
# design's settled cherry-picked widget set; 8.x targets ratatui-core 0.1 —
# the same core ratatui 0.30 is built on, so the Text/Span types unify.
# The `render.py` CSI/C0 pre-filter is OURS (`ansi::filter_ansi`) — this
# crate only converts the SGR that survives it.
ansi-to-tui = "8"

[dev-dependencies]
# Snapshot tests over TestBackend's Display impl — the AppState→render seam
# is the testable surface (spike 1.4).
insta = "1"
# The context integration tests implement `mandala_mcp::effects::Effects`
# (an async-trait trait) over sh-stub runners.
async-trait = "0.1"
