[package]
name = "nix-build-forest"
description = "Tolerant Nix internal-JSON build state and derivation-forest model"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = ["plain"]
plain = []
ratatui = ["dep:ratatui"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "macros"] }
ratatui = { version = "0.30", default-features = false, optional = true }

[dev-dependencies]
zstd = "0.13"
